# snek

./: README.md  pyproject.toml  snek.py
res/: res.pyxres
snek/: __main__.py
